--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,195 @@
+absl-py==0.13.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==3.3.1
+argon2-cffi==21.1.0
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.9.1
+backcall==0.2.0
+bleach==4.1.0
+blinker==1.8.2
 blis==0.7.9
+brotlipy==0.7.0
+cachetools==4.2.2
 catalogue==2.0.8
 certifi==2021.5.30
+cffi @ file:///tmp/build/80754af9/cffi_1625807838443/work
+chardet @ file:///tmp/build/80754af9/chardet_1607706746162/work
 charset-normalizer==2.0.12
 click==7.1.2
-confection==0.0.3
+cloudpathlib==0.16.0
+colorama==0.4.6
+conda==4.10.3
+conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1618262148928/work
+confection==0.1.4
 conllu==4.5.2
 contextvars==2.4
+cryptography @ file:///tmp/build/80754af9/cryptography_1616769286105/work
 cycler==0.11.0
 cymem==2.0.6
-
+Cython==0.29.14
+dataclasses-json==0.6.6
+debugpy==1.4.3
 decorator==4.4.2
+defusedxml==0.7.1
 Django==2.2.5
-
-
+en-core-sci-sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_sm-0.4.0.tar.gz#sha256=ce30c9c97a4a6ab1f296d84cf587da6b1e3e867b53c17f2197e8f422de69b899
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl#sha256=dfba97b3cb5c177f60c4087a5b4f5c9d7f5c0fce7150d8aa7c0aab4eb4811a07
+entrypoints==0.3
 filelock==3.4.1
+frozenlist==1.4.1
 future==0.18.2
 fuzzywuzzy==0.18.0
-gensim==3.4.0
+gensim==3.8.3
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+greenlet==3.0.3
+grpcio==1.40.0
 huggingface-hub==0.4.0
-idna==3.3
+idna==2.10
 immutables==0.17
 importlib-metadata==4.8.3
 importlib-resources==5.4.0
+ipykernel==6.4.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+itsdangerous==2.2.0
+jedi==0.18.0
 Jinja2==3.0.3
 joblib==1.1.0
+json5==0.9.6
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==3.2.0
+jupyter-client==7.0.3
+jupyter-core==4.8.1
+jupyter-server==1.11.0
+jupyterlab==3.1.12
+jupyterlab-language-pack-zh-CN @ http://autodl-public.ks3-cn-beijing.ksyun.com/instance/jupyterlab_language_pack_zh_CN-0.0.1.dev0-py2.py3-none-any.whl
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.8.1
+jupyterlab-widgets==1.0.2
 kiwisolver==1.3.1
+langchain==0.2.2
+langchain-community==0.2.2
+langchain-core==0.2.4
+langchain-text-splitters==0.2.1
 langcodes==3.3.0
-MarkupSafe==2.0.1
+langsmith==0.1.71
+Markdown==3.3.4
+MarkupSafe==2.1.5
+marshmallow==3.21.2
 matplotlib==3.3.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+matplotlib-inline==0.1.3
+mistune==0.8.4
+multidict==6.0.5
 murmurhash==1.0.6
+mypy-extensions==1.0.0
+nbclassic==0.3.2
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
 networkx==2.5.1
 nltk==3.6.5
 nmslib==2.1.1
+notebook==6.4.4
 numpy==1.19.5
+oauthlib==3.1.1
 olefile==0.46
+orjson==3.10.3
 packaging==21.3
 pandas==1.1.5
+pandocfilters==1.5.0
+parso==0.8.2
+pathlib-abc==0.1.1
 pathy==0.6.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.4.0
-
+pke @ file:///root/pke-master/pke-master
 plac==1.1.3
 preshed==3.0.6
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+protobuf==3.18.0
 psutil==5.9.3
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pybind11==2.6.1
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 pydantic==1.8.2
+pydantic-core==2.18.4
+Pygments==2.10.0
 pyinflect==0.5.1
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
 pyparsing==3.0.7
+pypdf==4.2.0
+pyrsistent==0.18.0
 pysbd==0.3.4
+PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
 python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
+pyzmq==22.3.0
 rank-bm25==0.2.2
 regex==2022.3.2
 requests==2.27.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.7.2
+ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016699510/work
 sacremoses==0.0.47
 scikit-learn==0.24.2
 scipy==1.5.4
 scispacy==0.5.1
 seaborn==0.11.2
+Send2Trash==1.8.0
 sentencepiece==0.1.96
-
+six @ file:///tmp/build/80754af9/six_1623709665295/work
 sklearn==0.0
 smart-open==5.2.1
-spacy==3.4.2
-spacy-legacy==3.0.10
+sniffio==1.2.0
+spacy==3.7.4
+spacy-legacy==3.0.12
 spacy-loggers==1.0.2
+SQLAlchemy==2.0.30
 sqlparse==0.4.2
 srsly==2.4.5
 summa==1.2.0
-thinc==8.1.5
+supervisor==4.2.2
+tenacity==8.3.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+terminado==0.12.1
+testpath==0.5.0
+thinc==8.2.3
 threadpoolctl==3.1.0
 tokenizers==0.10.3
 torch==1.10.2
 torchaudio==0.10.2
 torchvision==0.11.3
+tornado==6.1
 tqdm==4.63.0
+traitlets==5.1.0
 transformers==4.12.1
 typer==0.3.2
-
+typing-extensions==4.4.0
+typing-inspect==0.9.0
 Unidecode==1.3.6
 urllib3==1.26.8
 wasabi==0.9.1
+wcwidth==0.2.5
+weasel==0.3.4
+webencodings==0.5.1
+websocket-client==1.2.1
+werkzeug==3.0.3
+widgetsnbextension==3.5.1
+yarl==1.9.4
 zipp==3.6.0
