--- a/env.yml
+++ b/env.yml
@@ -92,6 +92,7 @@ dependencies:
   - pygments=2.18.0=pyhd8ed1ab_0
   - pyqt=5.15.10=py310h6a678d5_0
   - python=3.10.14=h955ad1f_1
+  - python-fastjsonschema=2.16.2=py310h06a4308_0
   - python_abi=3.10=2_cp310
   - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
@@ -110,19 +111,33 @@ dependencies:
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
   - pip:
+    - absl-py==2.1.0
+    - accelerate==0.33.0
     - aiohttp==3.9.5
     - aiosignal==1.3.1
+    - albucore==0.0.13
+    - albumentations==1.4.14
     - annotated-types==0.7.0
+    - antlr4-python3-runtime==4.9.3
     - anyio==4.4.0
     - asgiref==3.8.1
+    - astor==0.8.1
     - async-timeout==4.0.3
+    - attrdict==2.0.1
     - attrs==23.2.0
+    - babel==2.16.0
     - backoff==2.2.1
+    - bce-python-sdk==0.9.19
     - bcrypt==4.2.0
     - beautifulsoup4==4.12.3
     - bertopic==0.16.2
+    - black==24.8.0
+    - blinker==1.8.2
     - blis==0.7.11
-    - brotli==1.0.9
+    - boto3==1.35.5
+    - botocore==1.35.5
+    - braceexpand==0.1.7
+    - brotli==1.1.0
     - build==1.2.1
     - cachetools==5.4.0
     - catalogue==2.0.10
@@ -133,16 +148,23 @@ dependencies:
     - chromadb==0.5.5
     - click==8.1.7
     - cloudpathlib==0.16.0
+    - cloudpickle==3.0.0
     - coloredlogs==15.0.1
+    - colorlog==6.8.2
     - confection==0.1.5
     - contourpy==1.2.0
     - cryptography==43.0.0
+    - cssselect==1.2.0
+    - cssutils==2.11.1
     - cymem==2.0.8
     - cython==0.29.37
     - dataclasses-json==0.6.7
+    - datasets==2.21.0
     - debugpy==1.6.7
     - deepdiff==7.0.1
     - deprecated==1.2.14
+    - detectron2==0.6
+    - dill==0.3.8
     - distro==1.9.0
     - django==2.2.5
     - dnspython==2.6.1
@@ -150,16 +172,29 @@ dependencies:
     - emoji==2.12.1
     - en-core-sci-sm==0.4.0
     - en-core-web-sm==3.0.0
+    - et-xmlfile==1.1.0
+    - eva-decord==0.6.1
+    - eval-type-backport==0.2.0
+    - evaluate==0.4.2
+    - fairscale==0.4.13
+    - fast-langdetect==0.2.0
     - fastapi==0.111.1
     - fastapi-cli==0.0.4
+    - fastjsonschema==2.16.2
+    - fasttext-wheel==0.9.2
     - filelock==3.13.1
     - filetype==1.2.0
+    - fire==0.6.0
+    - flask==3.0.3
+    - flask-babel==4.0.0
     - flatbuffers==24.3.25
     - fonttools==4.51.0
     - frozenlist==1.4.1
-    - fsspec==2024.6.1
+    - fsspec==2024.3.1
+    - ftfy==6.2.3
     - future==1.0.0
     - fuzzywuzzy==0.18.0
+    - fvcore==0.1.5.post20221221
     - gensim==4.3.2
     - google-auth==2.32.0
     - googleapis-common-protos==1.63.2
@@ -170,17 +205,24 @@ dependencies:
     - httpcore==1.0.5
     - httptools==0.6.1
     - httpx==0.27.0
-    - huggingface-hub==0.24.5
+    - huggingface-hub==0.24.6
     - humanfriendly==10.0
+    - hydra-core==1.3.2
     - idna==3.7
+    - imageio==2.35.1
+    - imgaug==0.4.0
     - importlib-metadata==7.0.1
     - importlib-resources==6.4.0
-    - iopath==0.1.10
+    - iopath==0.1.9
+    - itsdangerous==2.2.0
     - jinja2==3.1.4
+    - jmespath==1.0.1
     - joblib==1.4.2
     - jsonpatch==1.33
     - jsonpath-python==1.0.6
     - jsonpointer==3.0.0
+    - jsonschema==4.19.2
+    - jsonschema-specifications==2023.7.1
     - jupyter-core==5.7.2
     - kiwisolver==1.4.4
     - kubernetes==30.1.0
@@ -197,9 +239,14 @@ dependencies:
     - langsmith==0.1.87
     - language-data==1.2.0
     - layoutparser==0.3.4
+    - lazy-loader==0.4
     - llvmlite==0.43.0
+    - lmdb==1.5.1
+    - loguru==0.7.2
     - lxml==5.2.2
+    - magic-pdf==0.7.0b1
     - marisa-trie==1.2.0
+    - markdown==3.7
     - markdown-it-py==3.0.0
     - markupsafe==2.1.5
     - marshmallow==3.21.3
@@ -209,11 +256,15 @@ dependencies:
     - mkl-random==1.2.4
     - mkl-service==2.4.0
     - mmh3==4.1.0
+    - modelscope==1.17.1
     - monotonic==1.6
+    - more-itertools==10.4.0
     - mpmath==1.3.0
     - multidict==6.0.5
+    - multiprocess==0.70.16
     - murmurhash==1.0.10
     - mypy-extensions==1.0.0
+    - nbformat==5.9.2
     - networkx==3.3
     - nltk==3.6.5
     - numba==0.60.0
@@ -231,10 +282,14 @@ dependencies:
     - nvidia-nvjitlink-cu12==12.5.82
     - nvidia-nvtx-cu12==12.1.105
     - oauthlib==3.2.2
+    - omegaconf==2.3.0
     - onnx==1.16.1
     - onnxruntime==1.18.1
     - openai==1.37.1
-    - opencv-python==4.10.0.84
+    - opencv-contrib-python==4.6.0.66
+    - opencv-python==4.6.0.66
+    - opencv-python-headless==4.10.0.84
+    - openpyxl==3.1.5
     - opentelemetry-api==1.26.0
     - opentelemetry-exporter-otlp-proto-common==1.26.0
     - opentelemetry-exporter-otlp-proto-grpc==1.26.0
@@ -245,13 +300,18 @@ dependencies:
     - opentelemetry-sdk==1.26.0
     - opentelemetry-semantic-conventions==0.47b0
     - opentelemetry-util-http==0.47b0
+    - opt-einsum==3.3.0
     - ordered-set==4.1.0
     - orjson==3.10.6
     - overrides==7.7.0
     - packaging==24.1
+    - paddleocr==2.7.3
+    - paddlepaddle==3.0.0b1
     - pandas==2.2.2
     - pathlib-abc==0.1.1
+    - pathspec==0.12.1
     - pathy==0.11.0
+    - pdf2docx==0.5.8
     - pdf2image==1.17.0
     - pdfminer==20191125
     - pdfminer-six==20231228
@@ -266,17 +326,26 @@ dependencies:
     - pooch==1.7.0
     - portalocker==2.10.1
     - posthog==3.5.0
+    - premailer==3.10.0
     - preshed==3.0.9
     - protobuf==4.25.4
     - psutil==5.9.0
+    - py-cpuinfo==9.0.0
+    - pyarrow==17.0.0
     - pyasn1==0.6.0
     - pyasn1-modules==0.4.0
+    - pybind11==2.13.5
+    - pyclipper==1.3.0.post5
+    - pycocotools==2.0.8
     - pycparser==2.22
     - pycryptodome==3.20.0
     - pydantic==2.8.2
     - pydantic-core==2.20.1
     - pyinflect==0.5.1
+    - pymupdf==1.24.9
+    - pymupdfb==1.24.9
     - pynndescent==0.5.13
+    - pypandoc==1.13
     - pyparsing==3.0.9
     - pypdf==4.3.0
     - pypdfium2==4.30.0
@@ -287,6 +356,7 @@ dependencies:
     - pysocks==1.7.1
     - pytesseract==0.3.10
     - python-dateutil==2.9.0.post0
+    - python-docx==1.1.2
     - python-dotenv==1.0.1
     - python-iso639==2024.4.27
     - python-magic==0.4.27
@@ -296,18 +366,25 @@ dependencies:
     - pyzmq==25.1.2
     - rank-bm25==0.2.2
     - rapidfuzz==3.9.5
-    - regex==2023.10.3
+    - rarfile==4.2
+    - referencing==0.30.2
+    - regex==2024.5.15
     - requests==2.32.2
     - requests-oauthlib==2.0.0
     - requests-toolbelt==1.0.0
     - rich==13.7.1
+    - robust-downloader==0.0.2
+    - rpds-py==0.10.6
     - rsa==4.9
+    - s3transfer==0.10.2
     - safetensors==0.4.2
+    - scikit-image==0.24.0
     - scikit-learn==1.4.2
-    - scipy==1.14.0
+    - scipy==1.10.1
     - seaborn==0.11.2
     - sentence-transformers==3.0.1
     - setuptools==69.5.1
+    - shapely==2.0.6
     - shellingham==1.5.4
     - sip==6.7.12
     - smart-open==5.2.1
@@ -320,31 +397,40 @@ dependencies:
     - sqlparse==0.5.1
     - srsly==2.4.8
     - starlette==0.37.2
+    - struct-eqtable==0.1.0
     - summa==1.2.0
     - sympy==1.13.0
     - tabulate==0.9.0
     - tenacity==8.5.0
+    - tensorboard==2.17.1
+    - tensorboard-data-server==0.7.2
+    - termcolor==2.4.0
     - tesseract==0.1.3
     - thinc==8.2.5
     - threadpoolctl==3.5.0
+    - tifffile==2024.8.10
     - tiktoken==0.7.0
-    - timm==1.0.8
+    - timm==0.9.16
     - tokenizers==0.19.1
     - tomli==2.0.1
     - torch==2.3.1
     - torchaudio==2.3.1
+    - torchtext==0.18.0
     - torchvision==0.18.1
     - tornado==6.4.1
     - tqdm==4.66.4
-    - transformers==4.43.3
+    - transformers==4.44.2
     - triton==2.3.1
     - typer==0.12.3
-    - typing-extensions==4.12.2
+    - typing-extensions==4.11.0
     - typing-inspect==0.9.0
     - tzdata==2024.1
+    - ultralytics==8.2.82
+    - ultralytics-thop==2.0.5
     - umap-learn==0.5.6
     - unicodedata2==15.1.0
     - unidecode==1.3.8
+    - unimernet==0.1.6
     - unstructured==0.15.0
     - unstructured-client==0.25.1
     - unstructured-inference==0.7.36
@@ -352,13 +438,20 @@ dependencies:
     - urllib3==2.2.2
     - uvicorn==0.30.4
     - uvloop==0.19.0
+    - visualdl==2.5.3
+    - wand==0.6.13
     - wasabi==0.10.1
     - watchfiles==0.22.0
     - weasel==0.3.4
+    - webdataset==0.2.96
     - websocket-client==1.8.0
     - websockets==12.0
+    - werkzeug==3.0.4
     - wheel==0.43.0
+    - wordninja==2.0.0
     - wrapt==1.16.0
+    - xxhash==3.5.0
+    - yacs==0.1.8
     - yarl==1.9.4
     - zipp==3.17.0
 prefix: /root/miniconda3/envs/pdf
